<resources>
    <string name="app_name">MirParfumaNew</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">О магазине</string>
    <string name="cashe">Оплата и доставка</string>
    <string name="otzuvu">Отзывы</string>
    <string name="batc_cod">Проверить батч-код</string>
    <string name="info">Полезная информация</string>
    <string name="help">Помощь</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="velcom">+375 29 157-57-05</string>
    <string name="mts">+375 29 864-35-73</string>
    <string name="life">+375 25 938-71-09</string>
    <string name="adress">Магазин: г. Минск, ул. В. Хоружей 1А ТЦ \"Силуэт\"</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="home">ГЛАВНАЯ</string>
    <string name="search">ПОИСК</string>
    <string name="favorites">ИЗБРАННЫЕ</string>
    <string name="trash">КОРЗИНА</string>
    <string name="action_client">Кабинет клиента</string>

    <string name="women_parfum">Женская парфюмерия</string>
    <string name="men_parfum">Мужская парфюмерия</string>
    <string name="unisex_parfum">Унисекс ароматы</string>
    <string name="nishevui_parfum">Нишевая парфюмерия</string>
    <string name="probnik">Пробники</string>
    <string name="brendu">Бренды:</string>
    <string name="novinki">Новинки:</string>
    <string name="sales">Распродажи:</string>
    <string name="favorite">Бестселлеры:</string>
    <string name="vse"><u>все</u></string>

    <string name="text_splash">Любовь с первого вздоха!</string>

    <string name="empty_favorite">В избранном пока пусто :(</string>
    <string name="text_empty_favorite">Начать пополнять список желаний можно \n зайдя в карточку продукта нажав \n на кнопку \"В избранные\".</string>
    <string name="button_favorite">Перейти в каталог</string>

    <string name="empty_trash">В вашей корзине пока пусто :(</string>
    <string name="text_empty_trash">Но это легко исправить. \n В нашем магазине тысячи прекрасных \n ароматов на любой вкус.</string>
    <string name="search_hint">   Начните писать, а мы подскажем...</string>
    <string name="title_no_connection">Нет соединения с сайтом</string>
    <string name="messge_no_connection">Уважаемый покупатель, на данный момент вы не можете воспользоваться нашими услугами. Мы уже знаем что не так и постараемся в ближайшее время всё исправить. Попробуйте воспользоваться нашим сервисом через некоторое время.</string>
    <string name="positive_button">Хорошо</string>
    <string name="noBrendu">Для данных символов нет брендов</string>
    <string name="pick_parfum">Подбор парфюмерии</string>
    <string name="aboutParfum">Описание:</string>
    <string name="loadMessage">Загрузка данных....</string>
    <string name="cenaYou">Ваша цена за</string>
    <string name="cena">р.</string>
    <string name="text_cena">Выберите необходимый объём</string>
    <string name="character">Характеристики:</string>
    <string name="brend">Бренд:</string>
    <string name="aromat">Аромат:</string>
    <string name="type">Тип:</string>
    <string name="for_">Для кого:</string>
    <string name="year">Год создания:</string>
    <string name="semeistvo">Семейство ароматов:</string>
    <string name="and">и</string>
    <string name="first_note">Начальные ноты:</string>
    <string name="country">Страна изготовитель:</string>
    <string name="no_parfum">Нет в наличии</string>
    <string name="button_time">Сообщить о появлении</string>
    <string name="no_about">Нет описания</string>
    <string name="add_favorites">В избранные</string>
    <string name="no_count">Нет отзывов</string>
    <string name="zakaz_for">Предзаказ (скидка до 15%)</string>
    <string name="to_trash">Добавить в корзину</string>
    <string name="add_to_trash">Добавить в корзину</string>
    <string name="price">Цена:</string>
    <string name="podbor">Подбор парфюмерии</string>
    <string name="all">Все</string>
    <string name="Close">Закрыть</string>
    <string name="brends">брендов</string>
    <string name="choise">Выбрано</string>
    <string name="podbor_">Фильтры</string>
    <string name="apply">Готово</string>
    <string name="deselect_all">Снять выделение</string>
    <string name="select_all">Выделить всё</string>
    <string name="choiseBrendu">Выберите бренды</string>
    <string name="no_choise_brend">Выберите хотя бы один бренд</string>
    <string name="cancel">Отмена</string>
    <string name="choiseType">Выберите тип парфюмерии</string>
    <string name="types">типов</string>
    <string name="no_otzuvu">Нет отзывов</string>
    <string name="load">Загружено</string>
    <string name="iz">из</string>
    <string name="loasStart">Загружаем данные с сайта....</string>
    <string name="loadMain">Данные в приложении актуальны</string>
    <string name="choiseBrenduSearch">Вы выбрали</string>
    <string name="number_picker_formatter">1</string>
    <string name="vsego">Итого</string>
    <string name="no_choise_for">Выберите хотя бы один элемент</string>
    <string name="for_for">для</string>
    <string name="search_for">Искать для</string>
    <string name="choiseFor">Выберите для кого</string>
    <string name="choiseYear">Выберите год производства духов</string>
    <string name="elements">элементов</string>
    <string name="choiseCountryTitle">выберите страны производства</string>
    <string name="predzakaz_parfum">Предзаказ</string>
    <string name="link_mir_Parfuma">www.MirParfuma.by</string>

    <string name="about_shop"><![CDATA[<h2>Купить туалетную воду в Беларуси стало проще!</h2> <p>О великой магии аромата известно давно &ndash; еще в старые рыцарские времена прекрасные дамы одаривали своих возлюбленных тонкими надушенными платками в знак сердечной привязанности. И хоть сегодня таких подарков уже не делают,&nbsp;туалетная вода&nbsp;по-прежнему остается неотъемлемым составляющим арсенала красоты каждой представительницы прекрасной половины человечества. Образ прекрасной дамы сегодня будет не полным, если за ней не тянется заманчивый шлейф тонкого изысканного аромата.&nbsp;Парфюмерия в Минске &ndash; настоящее волшебство, ведь она своими нотами отражает состояние души, черты характера &ndash; нужно только научиться их разгадывать. Не зря у влюбленного мужчины воспоминание о женщине его мечты неразрывно связано с ароматом ее духов.</p> <p>Возможно, именно поэтому, многие рыцари сегодняшнего дня чаще всего выбирают в качестве подарка на торжественную дату или просто без всякого повода именно туалетную воду для женщин. А необкновенное развитие парфюмерной индустрии и обилие на прилавках магазинов самых разных ароматов играют им при этом на руку. Правда, в таком тонком и даже интимном подарке есть свои сложности &ndash; пристрастия в запахах всегда очень индивидуальны, а значит, у мужчины есть только два варианта &ndash; либо он очень хорошо знаком со вкусом своей избранницы, либо он выбирает проверенные решения, ставшие классикой парфюма &ndash; ошибки с таким выбором быть просто не может. Имено такая женская туалетная вода представлена в нашем магазине. Имена великих парфюмерных компаний, производящих ароматы и для мужчин, и для женщин, от А до Я, а точнее &ndash; от A до Z &ndash; представлены в нашем каталоге.</p> <p>\"Куплю туалетную воду\" &ndash; думаете вы и заходите в наш магазин. Верное решение! Ассортимент самых разных ароматов здесь настолько широк, а цены так привлекательны, что лучшего места для совершения такой покупки придумать сложно.</p> <p>У нас вы можете&nbsp;купить туалетную воду&nbsp;любой известной марки. Все фэшн-ароматы, которые сегодня на слуху, а также десятки марок, известных не так широко, представлены в нашем каталоге во впечатляющем разнобразии.&nbsp;Духи в Минске создают настроение &ndash; свежесть морских ароматов, романтика цветочной гармонии, энергия и заманчивость фруктовых нот &ndash; все, что вы пожелаете, найдется за минуту и порадует не только известным именем на флаконе и чарующим ароматом, но и не менее головокружительной ценой. Купить туалетную воду в Минске не составляет сегодня большого труда, но заранее определиться с тем или иным &nbsp;ароматом через интернет-витрину гораздо проще и удобнее. Здесь вы можете подробно ознакомиться с каждым ароматом, ведь он снабжается подробным описанием. Отличная покупка, приятная во всех смыслах &ndash; и экономичной стоимостью, и отсутствием необходимости стоять у прилавка &ndash; можно уютно устроиться в кресле с ноутбуком и внимательно изучить весь ассортимент.</p> <p>Впрочем, все, что мы сказали о женских ароматах, можно в той же мере применить и к мужчинам. Ни один представитель сильного пола не откажется благоухать ароматом качественной мужской туалетной воды. Запахи сдержанные и игривые, свежие и сладкие, строгие и романтичные &ndash; любая сторона мужественной натуры найдет свое воплощение в тонких нотах туалетной воды для мужчин.</p> <p>Мы предлагаем своим клиентам туалетную воду в Минске в действительно огромном разнообразии. В нашем каталоге заботливо собрано все лучшее, что дала миру парфюмерная индустрия, и сегодня вы имеете возможность выбрать лучшее из лучшего &ndash; то, что идеально отвечает именно вашим пристрастиям, гармонично дополнит именно ваш образ и подарит вам радость, отличное настроение и уверенность в себе.</p> <p>Мы находимся в торговом центре <strong>\"Силуэт\"</strong> по адресу ул. В.Хоружей, 1А.</p> <p>Магазин расположен на первом этаже&nbsp;справа от эскалатора <strong>(ряд 4, магазин № 2)</strong>.</p> <p>Работаем <strong>ежедневно</strong> с 10.00 до 20.00 (воскресенье до 19.00).</p> <p><strong>Телефоны:&nbsp;</strong>+375 29 157-57-05 Велком,&nbsp;+375 29 864-35-73 МТС,&nbsp;+375 25 938-71-09 Лайф :)</p> <p>Регистрационный номер в Торговом реестре Республики Беларусь №333004.</p> <p><img src=\"http://mirparfuma.com/assets/images/mp.jpg\" width=\"600\" height=\"400\" />&nbsp;<img src=\"http://mirparfuma.com/assets/images/mp_siluet.jpg\" width=\"600\" height=\"400\" /></p> <p><strong>Юридический адрес (для почтовых отправлений:&nbsp;220141, г.Минск, ул. Шугаева, 23/1, кв.98)</strong></p> <h2></h2>]]></string>
    <string name="about_shop_title_text">\"МирПарфюма\" \n Любовь с первого вздоха</string>
    <string name="about_shop_text" formatted="false"><![CDATA[<p><strong>Почему 95% клиентов&nbsp;<a href="http://MirParfuma.by">MirParfuma.by</a>&nbsp;остались довольны покупкой?</strong></p>
<ul style="list-style-type: circle; color: #ec1468;">
<li><span style="color: #ec1468;"><strong>100% качество по выгодной цене</strong></span></li>
</ul>
<p>В "Мире парфюма" вы покупаете превосходные ОРИГИНАЛЬНЫЕ ароматы по привлекательным ценам. Мы не торгуем подделками. Чтобы удостовериться в оригинальности товара, проверяйте батч-код.</p>
<p>P.S. Если вынайдёте подлинный аромат в сети по меньшей стоимости чем у нас, мы вернём вам разницу ;)</p>]]></string>
    <string name="po_novizne">по новизне</string>
    <string name="filter">фильтровать</string>
    <string name="from">от</string>
    <string name="rubblei">р.</string>
    <string name="added_to_trash">Удалить из корзины</string>
    <string name="no_info_about_parfum">Нет описания</string>
    <string name="go_to_trash">Уже в корзине. \n Перейти к оформлению.</string>

    <string-array name="count_parfum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

</resources>
